# chaincheck

./: .envrc  .gitattributes  .gitignore  README.md  SECURITY.md  build.gradle.kts  firestore.rules  gradle.properties  settings.gradle.kts
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/evals/: run_tripbrief.py  scenarios.py
backend/src/chaincheck/: __init__.py  corridors.py  passes.py  rules.py  tiers.py
backend/src/chaincheck/api/: app.py  appcheck.py  security.py  serialize.py
backend/src/chaincheck/brief/: facts.py  spendguard.py  tripbrief.py  validate.py
backend/src/chaincheck/data/: corridor_geometry.json
backend/src/chaincheck/feeds/: __init__.py  _http.py  nws.py  openmeteo.py  roads.py  webcams.py
backend/src/chaincheck/feeds/resorts/: __init__.py  base.py  boreal.py  diamondpeak.py  donner.py  homewood.py  mtnpowder.py  (+4 more)
backend/src/chaincheck/push/: dispatch.py  fcm.py  subscriptions.py
backend/src/chaincheck/watcher/: differ.py  poller.py
backend/tests/: conftest.py  test_api_guards.py  test_appcheck.py  test_brief_facts.py  test_corridors.py  test_differ.py  test_feed_http.py  test_hardening_extra.py  test_nws.py  test_openmeteo.py  test_poller.py  test_push.py  test_resorts.py  test_roads.py  test_rules.py  test_security.py  test_spendguard.py  test_tiers.py  test_tripbrief_scenarios.py  test_webcams.py
backend/tests/fixtures/: diamondpeak_sample.html  donner_sample.json  homewood_sample.html  mtnpowder_sample.json  mtrose_sample.html  sierra_lifts_sample.html  sugarbowl_sample.json  vail_terrain_sample.html
(+57 files in other folders)
