[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaincheck-backend"
version = "0.1.0"
description = "ChainCheck backend: Sierra chain controls, closures, pass forecasts, and resort snow in one API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "ca-roads-mcp @ git+https://github.com/nicglazkov/ca-roads-mcp@0b9e3a7d5f54b20a7e8cc1315fe26d80f08544c0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "firebase-admin>=6.5",
    "google-cloud-firestore>=2.16",
    "anthropic>=0.40",
    "tzdata; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.15.22",
]

[project.scripts]
chaincheck-api = "chaincheck.api.app:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chaincheck"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
